<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ツイ廃するやつ</string>
    <string name="menu_web">webを開く</string>
    <string name="hello_world">Hello world!</string>
    <string name="twitter_consumer_key">DfwswGpdyKi4BUulLPctHA</string>
    <string name="twitter_consumer_secret">w4rOZcyInE5uItvTmB91ni1pyRECQWp3ZYbX0LntcA</string>
    <string name="twitter_oauth">Twitterで認証</string>
    <string name="twitter_callback_url">tomoka319://twitter</string>
    <string name="tweet">つぶやく</string>
    <string name="menu_tweet">つぶやく</string>
    <string name="menu_refresh">更新</string>
    <string name="menu_timeline">TLを開く</string>
    <string name="menu_mail">開発者にメール</string>
    <string name="unknown">取得できませんでした</string>
    <string name="gps">GPS情報の表示</string>
    <string name="wifi">wifiスキャン</string>
    <string name="label_description">10進数を2進数に変換表示</string>
    <string name="label_integer">10進数：</string>
    <string name="label_binary">2進数：</string>
    <string name="button_convert">変換</string>
    <string name="calc">10進から2進に変換</string>
    
</resources>
