<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_reload"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_tweet"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/menu_tweet"/>
    <item
        android:id="@+id/menu_reload1"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_tweet1"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_tweet"/>
    <item
        android:id="@+id/menu_web"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_web"/>
    <item 
        android:id="@+id/menu_mail"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/menu_mail"/>
    <item
        android:id="@+id/menu_gps"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/gps"/>
    <item
        android:id="@+id/menu_wifi"
        android:orderInCategory="107"
        android:showAsAction="never"
        android:title="@string/wifi"/>
    <item
        android:id="@+id/menu_wifi_setting"
        android:orderInCategory="108"
        android:showAsAction="never"
        android:title="@string/wifi_on_off">
    <item
        android:id="@+id/menu_speed"
        android:orderInCategory="109"
        android:showAsAction="never"
        android:title="@string/speed"></item>
    </item>
    
</menu>